chore: configure rest exception from ApiException
