# src/main/java/pro/craftlab/voucher/repository/model/exception/BadRequestException.java
@@ -1,0 +1,7 @@
+package pro.craftlab.voucher.repository.model.exception;
+
+public class BadRequestException extends ApiException {
+  public BadRequestException(String message) {
+    super(ExceptionType.CLIENT_EXCEPTION, message);
+  }
+}
