# src/main/java/pro/craftlab/voucher/repository/model/exception/ForbiddenException.java
@@ -1,0 +1,11 @@
+package pro.craftlab.voucher.repository.model.exception;
+
+public class ForbiddenException extends ApiException {
+  public ForbiddenException(String message) {
+    super(ExceptionType.CLIENT_EXCEPTION, message);
+  }
+
+  public ForbiddenException() {
+    super(ExceptionType.CLIENT_EXCEPTION, "Access is denied");
+  }
+}
