# src/main/java/pro/craftlab/voucher/repository/model/exception/NotFoundException.java
@@ -1,0 +1,7 @@
+package pro.craftlab.voucher.repository.model.exception;
+
+public class NotFoundException extends ApiException {
+  public NotFoundException(String message) {
+    super(ExceptionType.CLIENT_EXCEPTION, message);
+  }
+}
