# src/main/java/pro/craftlab/voucher/repository/model/exception/NotImplementedException.java
@@ -1,0 +1,7 @@
+package pro.craftlab.voucher.repository.model.exception;
+
+public class NotImplementedException extends ApiException {
+  public NotImplementedException(String message) {
+    super(ExceptionType.SERVER_EXCEPTION, message);
+  }
+}
