# src/main/java/pro/craftlab/voucher/repository/model/exception/TooManyRequestsException.java
@@ -1,0 +1,7 @@
+package pro.craftlab.voucher.repository.model.exception;
+
+public class TooManyRequestsException extends ApiException {
+  public TooManyRequestsException(String message) {
+    super(ExceptionType.CLIENT_EXCEPTION, message);
+  }
+}
